--- a/ShoppingStore/Views/_ViewImports.cshtml
+++ b/ShoppingStore/Views/_ViewImports.cshtml
@@ -6,3 +6,5 @@
 @using ShoppingStore.Models.ManageViewModels
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *,GenericTagHelper
+@addTagHelper *,PaginationTagHelper
