--- a/ShoppingStore/Views/Shared/_SelectLanguagePartial.cshtml
+++ b/ShoppingStore/Views/Shared/_SelectLanguagePartial.cshtml
@@ -20,7 +20,7 @@
           method="post" class="form-horizontal" role="form">
         @Localizer["Language"]: <select name="culture"
                                         asp-for="@requestCulture.RequestCulture.UICulture.Name" asp-items="cultureItems"></select>
-        <button type="submit" class="btn btn-primary btn-xs">@Localizer["Change"]</button>
+        <button type="submit" class="btn btn-primary btn-xs">@Localizer["ChangeLanguage"]</button>
 
     </form>
 </div>  
