--- a/ShoppingStore/Views/_ViewImports.cshtml
+++ b/ShoppingStore/Views/_ViewImports.cshtml
@@ -1,9 +1,10 @@
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.Mvc.Localization
-@using ShoppingStore
+@using ShoppingStore.Models
 @using ShoppingStore.Models
 @using ShoppingStore.Models.AccountViewModels
 @using ShoppingStore.Models.ManageViewModels
+@using ShoppingStore.Models.ProductViewModels
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *,GenericTagHelper
