--- a/ShoppingStore/Views/_ViewImports.cshtml
+++ b/ShoppingStore/Views/_ViewImports.cshtml
@@ -1,7 +1,7 @@
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.Mvc.Localization
 @using ShoppingStore.Models
-@using ShoppingStore.Models
+@using ShoppingStore.Models.LocalizedViewModels
 @using ShoppingStore.Models.AccountViewModels
 @using ShoppingStore.Models.ManageViewModels
 @using ShoppingStore.Models.ProductViewModels
